--- a/index.html
+++ b/index.html
@@ -5,50 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Agency</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+        .fade-in { opacity: 0; transform: translateY(10px); transition: opacity 0.8s ease-out, transform 0.8s ease-out; }
+        .fade-in.visible { opacity: 1; transform: translateY(0); }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-white text-black">
+<!-- Navbar -->
+<nav class="fixed top-0 left-0 w-full bg-white shadow-md py-4 px-6 flex justify-between items-center z-50">
+    <h1 class="text-xl font-bold">Your Agency</h1>
+    <ul class="flex space-x-6">
+        <li><a href="#services" class="hover:underline">Services</a></li>
+        <li><a href="#contact" class="hover:underline">Contact</a></li>
+    </ul>
+</nav>
+
 <!-- Hero Section -->
-<section class="h-screen flex items-center justify-center text-center bg-blue-600 text-white">
-    <div>
-        <h1 class="text-5xl font-bold">Welcome to Your Agency</h1>
-        <p class="mt-4 text-lg">We help businesses grow with our expert services.</p>
-        <a href="#contact" class="mt-6 inline-block bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold">Get in Touch</a>
+<section class="h-screen flex items-center justify-center text-center px-6">
+    <div class="fade-in">
+        <h1 class="text-6xl font-extrabold leading-tight">We Help Businesses Grow</h1>
+        <p class="mt-4 text-lg text-gray-600">Expert solutions tailored for your success.</p>
+        <a href="#contact" class="mt-6 inline-block border-2 border-black text-black px-6 py-3 rounded-lg font-semibold hover:bg-black hover:text-white transition">Get in Touch</a>
     </div>
 </section>
 
 <!-- Services Section -->
-<section class="py-16 px-6">
-    <h2 class="text-3xl font-bold text-center">Our Services</h2>
-    <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="p-6 bg-white rounded-lg shadow-md">
-            <h3 class="text-xl font-semibold">Service 1</h3>
-            <p class="mt-2 text-gray-600">Description of your service.</p>
+<section id="services" class="py-24 px-6 text-center">
+    <h2 class="text-4xl font-bold fade-in">Our Services</h2>
+    <div class="mt-12 grid md:grid-cols-3 gap-12 fade-in">
+        <div class="p-6 border rounded-lg">
+            <h3 class="text-2xl font-semibold">Strategy</h3>
+            <p class="mt-2 text-gray-600">Data-driven approaches to growth.</p>
         </div>
-        <div class="p-6 bg-white rounded-lg shadow-md">
-            <h3 class="text-xl font-semibold">Service 2</h3>
-            <p class="mt-2 text-gray-600">Description of your service.</p>
+        <div class="p-6 border rounded-lg">
+            <h3 class="text-2xl font-semibold">Branding</h3>
+            <p class="mt-2 text-gray-600">Building a strong brand identity.</p>
         </div>
-        <div class="p-6 bg-white rounded-lg shadow-md">
-            <h3 class="text-xl font-semibold">Service 3</h3>
-            <p class="mt-2 text-gray-600">Description of your service.</p>
+        <div class="p-6 border rounded-lg">
+            <h3 class="text-2xl font-semibold">Marketing</h3>
+            <p class="mt-2 text-gray-600">Effective digital marketing campaigns.</p>
         </div>
     </div>
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="py-16 bg-blue-50 px-6">
-    <h2 class="text-3xl font-bold text-center">Contact Us</h2>
-    <form class="mt-8 max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+<section id="contact" class="py-24 px-6 text-center bg-gray-50">
+    <h2 class="text-4xl font-bold fade-in">Contact Us</h2>
+    <p class="mt-4 text-lg text-gray-600">Let's discuss how we can help you.</p>
+    <form class="mt-8 max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md fade-in">
         <input type="text" placeholder="Your Name" class="w-full p-3 border rounded mb-4">
         <input type="email" placeholder="Your Email" class="w-full p-3 border rounded mb-4">
         <textarea placeholder="Your Message" class="w-full p-3 border rounded mb-4"></textarea>
-        <button class="w-full bg-blue-600 text-white py-3 rounded font-semibold">Send Message</button>
+        <button class="w-full border-2 border-black text-black py-3 rounded font-semibold hover:bg-black hover:text-white transition">Send Message</button>
     </form>
 </section>
 
 <!-- Footer -->
-<footer class="py-6 text-center bg-gray-800 text-white">
+<footer class="py-6 text-center bg-white text-gray-600">
     <p>&copy; 2024 Your Agency. All rights reserved.</p>
 </footer>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        document.querySelectorAll(".fade-in").forEach(el => el.classList.add("visible"));
+    });
+</script>
 </body>
 </html>
