--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Hero Section -->
     <section class="h-screen flex items-center justify-center text-center px-6">
         <div class="fade-in">
-            <h1 class="text-6xl font-extrabold leading-tight text-red-600">We Help Businesses Grow</h1>
+            <h1 class="text-6xl font-extrabold leading-tight text-red-600">TEST FOR NEW HEADING</h1>
             <p class="mt-4 text-lg text-gray-600">Expert solutions tailored for your success.</p>
             <a href="#contact" class="mt-6 inline-block border-2 border-black text-black px-6 py-3 rounded-lg font-semibold hover:bg-black hover:text-white transition">Get in Touch</a>
         </div>
